# gml-beautify

./: .gitignore  BUILD.md  CMakeCache.txt  CMakeLists.txt  GMLBeautify  Makefile  README.md  beautify.cpp  beautify.h  cmake_install.cmake  compile.cpp  compile.h  compile_context.cpp  error.h  in.gml  lbstring.cpp  lbstring.h  main.cpp  modify_ast.cpp  parser.cpp  parser.h  production.cpp  production.h  project.cpp  project.h  resource.h  test.cpp  test.h  tokenstream.cpp  tokenstream.h  util.h
catch/: catch.hpp
demo/: case-comment.gml  colneg2.gml  ctest_0.gml  demical.gml  empty_statements.gml  hello_world.gml  line_split.gml  long_line.gml  loops.gml  loops2.gml  spacing.gml  stringTest.gml  trim.gmx  unfinished_comment.gml  varspacing.gml
main/: main.cpp
project/: CMakeLists.txt  project.cpp  project.h
project/resource/: object.cpp  object.h  resource.h  script.cpp  script.h
src/ast/: Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Production.cpp  Production.hpp  Readme.md  parse.cpp
tests/: test-beautifier.cpp  test-lexer.cpp  test-main.cpp
tests/examples/: block_comments_src.gml  braces_cmp (copy).gml  braces_cmp.gml  braces_src.gml  case-comment_cmp.gml  chained_else_if_cmp.gml  chained_else_if_src.gml  comment_blanks_cmp.gml  comment_blanks_src.gml  demical_cmp.gml  equals_cmp.gml  equals_src.gml  fn_cmp.gml  fn_src.gml  if-else_cmp.gml  if-else_src.gml  line_split_cmp.gml  line_split_src.gml  long_line_cmp.gml  loops_cmp.gml  negate_cmp.gml  negate_src.gml  spacingA_cmp.gml  spacingA_src.gml  spacingB_cmp.gml  spacingB_src.gml  spacingC_cmp.gml  (+10 more)
(+36 files in other folders)
